# spex

./: CMakeLists.txt  examples.py  setup.py  spex.cpp
Thesis/: Thesis - Outline.md  abstract.tex  algorithmic.tex  approaches.tex  content.tex  evaluation.tex  excitations.tex  fundamentals.tex  implementation.tex  introduction.tex  sikthesis.cls  summary.tex  thesis.bib  thesis.tex
tests/: test_excitations_with_tequilla.py  test_fermionic__excitations_with_tequila.py  test_fermionic_excitation_unit_tests.py  test_fermionic_operators.py  test_qubit_excitation.py
